# erobs

./: .dockerignore  .dockerignore.local  .dockerignore.prod  .gitignore  .mcp.json  .pre-commit-config.yaml  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_DIAGRAM.txt  CLAUDE.md  CLEANUP.md  CODE_QUALITY_ASSESSMENT.md  COMPREHENSIVE_REVIEW_EXECUTIVE_SUMMARY.md  DEVELOPER_ONBOARDING_ASSESSMENT.md  DOCKER.md  DOCUMENTATION_AUDIT_EXECUTIVE_SUMMARY.md  DOCUMENTATION_AUDIT_REPORT.md  Dockerfile  EMBEDDED_ACTIONS_README.md  IMPLEMENTATION_GUIDE_GRIPPER_CONFIG.md  INTEGRATION_PLAN.md  JAZZY-QUICKSTART.md  MIGRATION.md  MTC_PIPELINE_HARDCODING_ANALYSIS.md  ONBOARDING_GAPS_SUMMARY.md  PACKAGE_REORGANIZATION.md  PEER_REVIEW_READINESS_PLAN.md  PERFORMANCE_ANALYSIS_REPORT.md  QUICK_REFERENCE.txt  README.md  REPOSITORY_ANALYSIS.md  REVIEW_BUILD_DEPLOY.md  REVIEW_CONFIGS.md  REVIEW_DOCUMENTATION.md  REVIEW_INTERFACES.md  STATUS.md  TESTING_DOCUMENTATION_INDEX.md  TESTING_IMPLEMENTATION_GUIDE.md  TESTING_RISK_ASSESSMENT.md  TESTING_STEP4.md  TESTING_STRATEGY_EVALUATION.md  (+109 more)
src/beambot/: CMakeLists.txt  package.xml
src/beambot/beambot/: __init__.py  batch_planner.py  config_loader.py  octomap_to_planning_scene.py  pointcloud_relay.py
src/beambot/config/: beamline_octomap.bt  beamline_scene.yaml  cms_beamline.yaml  default_beamline.yaml  grippers.yaml  lix_beamline.yaml  manufacturing_specular.yml  manufacturing_specular_fullres.yml  oscan_octomap.bt  scene_capture.yml  scene_capture_noproj.yml  ur3e_beamline.yaml  vision_objects.json  zivid_3d_calibrated_aruco.yml  zivid_3d_settings.yml  zivid_3d_settings_calibration.yml  zivid_3d_settings_old.yml  zivid_bright.yml  zivid_man_specular.yml  zivid_man_specular_drylab.yml  zivid_settings.yml
src/beambot/launch/: beambot_bringup.launch.py  octomap_test.launch.py
src/beambot/mcp/: beambot_mcp_server.py  erobs_mcp_server.py  point_selector_gui.py
src/beambot/scripts/: beambot_client.py  capture_marker_sheet.py  capture_run.py  live_stitcher.py  perf_trace_run.sh  perf_trace_summarize.py  stitch_from_bag.py  stream_zivid_2d.py  test_contour_detection.py  test_pointcloud_stability.py  test_sample_detection.py  test_wafer_detection.py  trigger_zivid_capture.py
src/beambot/test/: test_algorithms.py  test_base_stages.py  test_batch_planner.py  test_hot_path_caching.py  test_orchestrator_parsing.py  test_plan_cache.py  test_robot_agent_extras.py  test_vision_pipeline.py  test_vlm_detector.py
src/beambot_interfaces/: CMakeLists.txt  package.xml
src/beambot_interfaces/action/: EndEffectorAction.action  MTCExecution.action  MoveToAction.action  PickPlaceAction.action  PickSampleAction.action  PipettorAction.action  PlaceSampleAction.action  VisionMoveToAction.action  VisionPickPlaceAction.action  VisionScanAction.action  VisionTaskAction.action
src/cms_beamtime/: CMakeLists.txt  README.md  package.xml
src/cms_beamtime/acceptance_tests/: bluesky_interrupt_resume.py  bluesky_interrupt_stop.py
src/cms_beamtime/cms_beamtime/: cms_beamtime_server.py  inner_state_machine.py  pdf_beamtime_server.py  tf_utilities.py
src/cms_beamtime/config/: joint_poses.yaml  obstacles.yaml  panda_config.yaml
src/cms_beamtime/launch/: cms_beamtime.launch.py  pdf_beamtime.launch.py  run.launch.py  ur_w_octomap.launch.py
src/cms_beamtime/src/: beamtime_entrypoint.cpp  cms_beamtime_client.py  cms_beamtime_server.cpp  follow_waypoints_moveit.py  follow_waypoints_moveit_reverse.py  inner_state_machine.cpp  pdf_beamtime_client.py  pick_place_demo.cpp  pick_place_task.cpp  pose_recorder.py  tool_exchange_pickplace.py  tool_exchanger.py
src/custom-ur-descriptions/lix_moveit_config/: CMakeLists.txt  package.xml
src/custom-ur-descriptions/lix_robot_description/: CMakeLists.txt  package.xml
src/custom-ur-descriptions/ur3e_hande_moveit_config/: CMakeLists.txt  README.md  package.xml
src/demos/hello_orchestrator/: CMakeLists.txt  README.md  package.xml
src/demos/hello_orchestrator_py/: CMakeLists.txt  README.md  package.xml
src/demos/hello_orchestrator_py_interfaces/: CMakeLists.txt  package.xml
src/end_effectors/onrobot_2fg7_driver/: CMakeLists.txt  package.xml
src/erobs_planning_scene/: CMakeLists.txt  README.md  package.xml
src/erobs_planning_scene/config/: beamline_scene.yaml
src/erobs_planning_scene/launch/: load_scene.launch.py
src/erobs_planning_scene/meshes/: README.md  thorlabs_table_collision.stl
src/erobs_planning_scene/scripts/: scene_publisher.py
src/gripper_service_trajectory_controller/: CMakeLists.txt  gripper_service_trajectory_controller.xml  package.xml
src/gripper_service_trajectory_controller/src/: gripper_service_trajectory_controller.cpp
src/mtc_gui/: ARUCO_DETECTION_UPDATE.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  PIPETTOR_INTEGRATION.md  PIPETTOR_USER_GUIDE.md  QUICK_REFERENCE.md  README.md  package.xml  pipettor_gui_test.json  setup.cfg  setup.py
src/mtc_gui/launch/: mtc_gui_client.launch.py
src/mtc_gui/mtc_gui/: __init__.py  agent_bridge.py  agent_modes.py  camera_panel.py  chat_panel.py  main.py  main_window.py  mtc_gui_client.py  pose_dialogs.py  pose_io.py  poses_manager.py  poses_panel.py  ros2_bridge.py  step_list_panel.py  task_forms.py  theme.py  visualization_panel.py
src/mtc_pipeline/: APRILTAG_VS_ZIVID_DETECTION_ANALYSIS.md  CMakeLists.txt  PICK_ONLY_TEST_MODE.md  PIPETTOR_MTC_INTEGRATION.md  PIPETTOR_MTC_STAGES.md  PIPETTOR_RVIZ_VISUALIZATION.md  QUICK_START_VISION_PICK_PLACE.md  README.md  README_ACTION_SERVER.md  README_ADD_END_EFFECTOR.md  README_GUI.md  REFACTORING_MOVEMENT_CODE.md  TEST_ZIVID_ARUCO_DETECTION.md  TODO.md  VISION_BASED_MOVEMENTS.md.old  VISION_GRIPPER_CONFIG.md  VISION_PICK_PLACE_GUIDE.md  VISION_PICK_PLACE_IMPROVEMENTS.md  VOLTAGE_MANAGEMENT.md  ZIVID_ARUCO_INTEGRATION.md  package.xml  test_gui_components.py  todo.md
src/mtc_py/: CMakeLists.txt  package.xml
src/ur5e_teleop/: CMakeLists.txt  QUICKSTART.md  QUICKSTART_JOINT_CONTROL.md  README.md  README_SERVO_ISSUES.md  package.xml
src/ur5e_with_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+1063 files in other folders)
