<?xml version="1.0"?>
<package format="3">
  <name>cms_beamtime</name>
  <version>0.1.0</version>
  <description>ROS2 Python implementation of the PDF beamtime pick-and-place server</description>
  <maintainer email="you@your.org">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <!-- Use ament_python for Python packages -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <build_depend>control_msgs</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>cms_beamtime_interfaces</exec_depend>

  <!-- External CLI scripts installed via CMakeLists -->
  <exec_depend>launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
