<?xml version="1.0"?>
<package format="3">
  <name>gripper_service_trajectory_controller</name>
  <version>0.0.0</version>
  <description>Controller that bridges FollowJointTrajectory commands to the gripper service.</description>
  <maintainer email="unknown@todo.todo">TODO</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>trajectory_msgs</depend>
  <depend>cms_beamtime_interfaces</depend>
  <depend>sensor_msgs</depend>

  <export>
    <pluginlib plugin="gripper_service_trajectory_controller.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
