<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mtc_gui</name>
  <version>0.0.0</version>
  <description>Graphical User Interface for MoveIt Task Constructor (MTC) Pipeline</description>
  <maintainer email="youremail@domain.com">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Dependencies for the GUI -->
  <depend>rclpy</depend>
  <depend>mtc_pipeline</depend>
  
  <!-- Python dependencies -->
  <exec_depend>python3-tkinter</exec_depend>
  
  <!-- Export -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

