<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mtc_gui</name>
  <version>0.0.1</version>
  <description>Graphical User Interface for MoveIt Task Constructor (MTC) Pipeline</description>
  <maintainer email="nsls2-software@bnl.gov">NSLS-II</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>cv_bridge</depend>
  <depend>zivid_interfaces</depend>

  <!-- Python dependencies -->
  <exec_depend>python3-pyqt6</exec_depend>
  <exec_depend>python3-pyqt6.qtwebengine</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <!-- Beambot package for action definitions and orchestrator -->
  <depend>beambot_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
