<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>mtc_pipeline</name>
<version>0.0.0</version>
<description>Motion planning pipeline</description>
<maintainer email="youremail@domain.com">user</maintainer>
<license>TODO: License declaration</license>

<buildtool_depend>ament_cmake</buildtool_depend>
<buildtool_depend>rosidl_default_generators</buildtool_depend>
<depend>ament_index_cpp</depend>
<depend>nlohmann-json-dev</depend>
<depend>moveit_task_constructor_core</depend>
<depend>moveit_ros_planning_interface</depend>
<depend>rclcpp</depend>
<depend>rclcpp_action</depend>
<depend>std_srvs</depend>
<depend>tf2_eigen</depend>
<depend>tf2_ros</depend>
<depend>tf2_geometry_msgs</depend>
<depend>geometry_msgs</depend>
<depend>zivid_interfaces</depend>
<depend>pipette_driver</depend>
<exec_depend>rosidl_default_runtime</exec_depend>
<member_of_group>rosidl_interface_packages</member_of_group>

<test_depend>ament_lint_auto</test_depend>
<test_depend>ament_lint_common</test_depend>

<export>
    <build_type>ament_cmake</build_type>
</export>
</package>